# fengshui-ai

./: .env.example  .gitignore  Claude.md  README.md  README.zh-CN.md  app.py  config.py  one-click-start.sh  orchestrator.py  prompts.py  pyproject.toml  schema.py  translations.py
api_clients/: audio_client.py  deepseek_client.py  step_client.py  wan_client.py
assets/: README.md
fixtures/: README.md
perception/: detector.py  facts.py  geometry.py
rules/: rule_base.json
scripts/: smoke_test.py
tests/: test_geometry.py  test_prompt_builder.py
