[project]
name = "fengshui-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cccc-pair>=0.4.32",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=1.24.0",
    "socksio>=1.0.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "ultralytics>=8.3.0",
    "opencv-python>=4.10.0",
    "pillow>=10.0.0",
    "gradio>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "json-repair>=0.30.0",
    "edge-tts>=6.1.0",
    "dashscope>=1.20.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "clip",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
clip = { git = "https://github.com/ultralytics/CLIP.git" }
